--- a/demo.html
+++ b/demo.html
@@ -4,12 +4,13 @@
 	<head>
 		<meta charset="utf-8">
 		<title>International Telephone Input</title>
+		<link rel="stylesheet" href="build/css/demo.css">
 		<link rel="stylesheet" href="build/css/intlTelInput.css">
 		<script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
 		<script src="build/js/intlTelInput.js"></script>
 		<script>
 		$(function() {
-		  initIntlNumberInput({
+		  $("#user-mobile-number-container").intlTelInput({
 		    inputId: "user-mobile-number"
 		  });
 		});
