--- a/demo.html
+++ b/demo.html
@@ -11,7 +11,7 @@
 	</head>
 
 	<body>
-		<input type="tel" id="mobile-number" value="+1 " placeholder="e.g. +44 1234567890"></div>
+		<input type="tel" id="mobile-number" value="+1 " placeholder="e.g. +44 1234567890">
 		<script>
 		$(function() {
 		  $("#mobile-number").intlTelInput();
