american placeholder in demo

--- a/demo.html
+++ b/demo.html
@@ -11,7 +11,7 @@
   </head>
 
   <body>
-    <input type="tel" id="mobile-number" placeholder="e.g. +44 1234567890">
+    <input type="tel" id="mobile-number" placeholder="e.g. +1 702 123 4567">
     <script>
     $(function() {
       $("#mobile-number").intlTelInput();
