updated lib paths after grunt bower changes

--- a/spec.html
+++ b/spec.html
@@ -8,12 +8,12 @@
   <script src="lib/jasmine/lib/jasmine-core/jasmine-html.js"></script>
 
   <!-- include source files here... -->
-  <script src="lib/jquery/jquery.min.js"></script>
+  <script src="lib/jquery/jquery.js"></script>
   <script src="src/js/data.js"></script>
   <script src="src/js/intlTelInput.js"></script>
 
   <!-- include helper files here... -->
-  <script src="lib/jasmine-jquery/lib/jasmine-jquery.js"></script>
+  <script src="lib/jasmine-jquery/jasmine-jquery.js"></script>
 
   <!-- include spec files here... -->
   <script src="src/js/tests.js"></script>
