plugin instances now have their own IDs, for better event handling etc

--- a/demo.html
+++ b/demo.html
@@ -7,12 +7,12 @@
     <link rel="stylesheet" href="build/css/demo.css">
   </head>
   <body>
-    <input type="tel" id="mobile-number" placeholder="e.g. +1 702 123 4567">
+    <input type="tel" placeholder="e.g. +1 702 123 4567">
 
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
     <script src="build/js/intlTelInput.js"></script>
     <script>
-      $("#mobile-number").intlTelInput();
+      $("input").intlTelInput();
     </script>
   </body>
 </html>
