--- a/spec.html
+++ b/spec.html
@@ -14,9 +14,22 @@
 
   <!-- include helper files here... -->
   <script src="lib/jasmine-jquery/jasmine-jquery.js"></script>
+  <script src="src/spec/helpers/helpers.js"></script>
 
   <!-- include spec files here... -->
-  <script src="src/js/tests.js"></script>
+  <script src="src/spec/tests/vanilla.js"></script>
+  <!-- options -->
+  <script src="src/spec/tests/options/initialDialCode.js"></script>
+  <script src="src/spec/tests/options/autoHideDialCode.js"></script>
+  <script src="src/spec/tests/options/americaMode.js"></script>
+  <script src="src/spec/tests/options/preferredCountries.js"></script>
+  <script src="src/spec/tests/options/onlyCountries.js"></script>
+  <script src="src/spec/tests/options/defaultStyling.js"></script>
+  <!-- methods -->
+  <script src="src/spec/tests/methods/selectCountry.js"></script>
+  <script src="src/spec/tests/methods/setNumber.js"></script>
+  <script src="src/spec/tests/methods/getCountryData.js"></script>
+  <script src="src/spec/tests/methods/setCountryData.js"></script>
 
   <script>
     (function() {
