removed initialDialCode option. added lots of tests.

--- a/spec.html
+++ b/spec.html
@@ -25,6 +25,7 @@
   <script src="src/spec/tests/options/preferredCountries.js"></script>
   <script src="src/spec/tests/options/onlyCountries.js"></script>
   <script src="src/spec/tests/options/defaultStyling.js"></script>
+  <script src="src/spec/tests/options/defaultCountry.js"></script>
   <!-- methods -->
   <script src="src/spec/tests/methods/selectCountry.js"></script>
   <script src="src/spec/tests/methods/setNumber.js"></script>
