--- a/spec.html
+++ b/spec.html
@@ -17,7 +17,9 @@
   <script src="src/spec/helpers/helpers.js"></script>
 
   <!-- include spec files here... -->
+  <!-- vanilla -->
   <script src="src/spec/tests/vanilla/core.js"></script>
+  <script src="src/spec/tests/vanilla/multipleInstances.js"></script>
   <script src="src/spec/tests/vanilla/keyboardShortcuts.js"></script>
   <!-- options -->
   <script src="src/spec/tests/options/autoHideDialCode.js"></script>
