--- a/demo.html
+++ b/demo.html
@@ -9,7 +9,7 @@
   <body>
     <input type="tel" placeholder="e.g. +1 702 123 4567">
 
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+    <script src="lib/jquery/jquery.js"></script>
     <script src="build/js/intlTelInput.js"></script>
     <script>
       $("input").intlTelInput();
