--- a/spec.html
+++ b/spec.html
@@ -9,8 +9,7 @@
 
   <!-- include source files here... -->
   <script src="lib/jquery/jquery.js"></script>
-  <script src="src/js/data.js"></script>
-  <script src="src/js/intlTelInput.js"></script>
+  <script src="build/js/intlTelInput.js"></script>
 
   <!-- include helper files here... -->
   <script src="lib/jasmine-jquery/jasmine-jquery.js"></script>
