--- a/demo.html
+++ b/demo.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="build/css/demo.css">
   </head>
   <body>
+    <h1>International Telephone Input</h1>
     <input type="tel" placeholder="e.g. +1 702 123 4567">
 
     <script src="lib/jquery/jquery.js"></script>
