--- a/examples/only-countries-europe.html
+++ b/examples/only-countries-europe.html
@@ -8,8 +8,9 @@
   </head>
 
   <body>
-    <h1>Example: onlyCountries set to array of European country codes</h1>
-    
+    <h1>Example: onlyCountries</h1>
+    <p>Set onlyCountries array to just European country codes</p>
+
     <h2>Code</h2>
     <pre>$("input").intlTelInput({
   onlyCountries: ["al", "ad", "at", "by", "be", "ba", "bg", "hr", "cz", "dk", "ee", "fo",
