--- a/demo.html
+++ b/demo.html
@@ -8,12 +8,12 @@
   </head>
   <body>
     <h1>International Telephone Input</h1>
-    <input type="tel" placeholder="e.g. +1 702 123 4567">
+    <input id="mobile-number" type="tel" placeholder="e.g. +1 702 123 4567">
 
     <script src="lib/jquery/jquery.js"></script>
     <script src="build/js/intlTelInput.js"></script>
     <script>
-      $("input").intlTelInput();
+      $("#mobile-number").intlTelInput();
     </script>
   </body>
 </html>
