--- a/demo.html
+++ b/demo.html
@@ -9,6 +9,7 @@
   <body>
     <h1>International Telephone Input</h1>
     <input id="mobile-number" type="tel" placeholder="e.g. +1 702 123 4567">
+    <button type="button">Submit</button>
 
     <script src="lib/jquery/jquery.js"></script>
     <script src="build/js/intlTelInput.js"></script>
