--- a/examples/modify-country-data.html
+++ b/examples/modify-country-data.html
@@ -16,7 +16,7 @@
 $.each(countryData.countries, function(i, country) {
   country.name = country.name.replace(/.+\((.+)\)/,"$1");
 });
-("input").intlTelInput();</pre>
+$("input").intlTelInput();</pre>
 
     <h2>Result</h2>
     <input type="tel" placeholder="e.g. +1 702 123 4567">
