--- a/examples/only-countries-europe.html
+++ b/examples/only-countries-europe.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>International Telephone Input</title>
+    <title>Example: onlyCountries</title>
     <link rel="stylesheet" href="css/prism.css">
     <link rel="stylesheet" href="../build/css/intlTelInput.css">
     <link rel="stylesheet" href="../build/css/demo.css">
@@ -11,13 +11,13 @@
   <body>
     <h1>Example: onlyCountries</h1>
     <p>Set onlyCountries array to just European country codes</p>
-
+    
     <h2>Code</h2>
     <pre><code class="language-javascript">$("input").intlTelInput({
-  onlyCountries: ["al", "ad", "at", "by", "be", "ba", "bg", "hr", "cz", "dk", "ee", "fo",
-   "fi", "fr", "de", "gi", "gr", "gg", "va", "hu", "is", "ie", "im", "it", "je", "lv",
-    "li", "lt", "lu", "mk", "mt", "md", "mc", "me", "nl", "no", "pl", "pt", "xk", "ro",
-     "ru", "sm", "rs", "sk", "si", "es", "sj", "se", "ch", "ua", "gb"]
+  onlyCountries: ["al", "ad", "at", "by", "be", "ba", "bg", "hr", "cz", "dk", "ee",
+  "fo", "fi", "fr", "de", "gi", "gr", "gg", "va", "hu", "is", "ie", "im", "it", "je",
+  "lv", "li", "lt", "lu", "mk", "mt", "md", "mc", "me", "nl", "no", "pl", "pt", "xk",
+  "ro", "ru", "sm", "rs", "sk", "si", "es", "sj", "se", "ch", "ua", "gb"]
 });</code></pre>
 
     <h2>Result</h2>
@@ -28,8 +28,11 @@
     <script src="../build/js/intlTelInput.js"></script>
     <script>
       $("input").intlTelInput({
-        onlyCountries: ["al", "ad", "at", "by", "be", "ba", "bg", "hr", "cz", "dk", "ee", "fo", "fi", "fr", "de", "gi", "gr", "gg", "va", "hu", "is", "ie", "im", "it", "je", "lv", "li", "lt", "lu", "mk", "mt", "md", "mc", "me", "nl", "no", "pl", "pt", "xk", "ro", "ru", "sm", "rs", "sk", "si", "es", "sj", "se", "ch", "ua", "gb"]
-      });
+  onlyCountries: ["al", "ad", "at", "by", "be", "ba", "bg", "hr", "cz", "dk", "ee",
+  "fo", "fi", "fr", "de", "gi", "gr", "gg", "va", "hu", "is", "ie", "im", "it", "je",
+  "lv", "li", "lt", "lu", "mk", "mt", "md", "mc", "me", "nl", "no", "pl", "pt", "xk",
+  "ro", "ru", "sm", "rs", "sk", "si", "es", "sj", "se", "ch", "ua", "gb"]
+});
     </script>
   </body>
 </html>
