--- a/examples/default-country-ip.html
+++ b/examples/default-country-ip.html
@@ -6,28 +6,32 @@
     <link rel="stylesheet" href="css/prism.css">
     <link rel="stylesheet" href="../build/css/intlTelInput.css">
     <link rel="stylesheet" href="../build/css/demo.css">
+    
   </head>
 
   <body>
     <h1>Example: defaultCountry</h1>
-    <p>Use IP address lookup to set the defaultCountry to the user's country</p>
+    <p>Use IP address lookup to set the defaultCountry to the user&#39;s country.</p>
     
+    <h2>Markup</h2>
+    <pre><code class="language-markup">&lt;input id=&quot;phone&quot; type=&quot;tel&quot; placeholder=&quot;e.g. +1 702 123 4567&quot;&gt;</code></pre>
+
     <h2>Code</h2>
-    <pre><code class="language-javascript">$.get("http://ipinfo.io", function(response) {
-  $("input").intlTelInput({
+    <pre><code class="language-javascript">$.get(&quot;http://ipinfo.io&quot;, function(response) {
+  $(&quot;#phone&quot;).intlTelInput({
     defaultCountry: response.country.toLowerCase()
   });
-}, "jsonp");</code></pre>
+}, &quot;jsonp&quot;);</code></pre>
 
     <h2>Result</h2>
-    <input type="tel" placeholder="e.g. +1 702 123 4567">
+    <input id="phone" type="tel" placeholder="e.g. +1 702 123 4567">
 
     <script src="js/prism.js"></script>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
     <script src="../build/js/intlTelInput.js"></script>
     <script>
       $.get("http://ipinfo.io", function(response) {
-  $("input").intlTelInput({
+  $("#phone").intlTelInput({
     defaultCountry: response.country.toLowerCase()
   });
 }, "jsonp");
