--- a/examples/gen/default-country-ip.html
+++ b/examples/gen/default-country-ip.html
@@ -10,6 +10,7 @@
   </head>
 
   <body>
+    <a href="/intl-tel-input.html">Back</a>
     <h1>Example: defaultCountry</h1>
     <p>Use IP address lookup to set the defaultCountry to the user&#39;s country.</p>
     
