--- a/examples/gen/default-styling.html
+++ b/examples/gen/default-styling.html
@@ -12,6 +12,7 @@
   </head>
 
   <body>
+    <a href="/intl-tel-input.html">Back</a>
     <h1>Example: defaultStyling</h1>
     <p>The 3 different settings for the defaultStyling option: &#39;inside&#39; (default), &#39;outside&#39; and &#39;none&#39;.</p>
     
