--- a/examples/gen/modify-country-data.html
+++ b/examples/gen/modify-country-data.html
@@ -10,6 +10,7 @@
   </head>
 
   <body>
+    <a href="/intl-tel-input.html">Back</a>
     <h1>Example: getCountryData</h1>
     <p>Use static getCountryData() to update the data to only show localised country names.</p>
     
