--- a/examples/gen/only-countries-europe.html
+++ b/examples/gen/only-countries-europe.html
@@ -10,6 +10,7 @@
   </head>
 
   <body>
+    <a href="/intl-tel-input.html">Back</a>
     <h1>Example: onlyCountries</h1>
     <p>Set onlyCountries array to just European country codes.</p>
     
