--- a/demo.html
+++ b/demo.html
@@ -11,7 +11,7 @@
     <input id="mobile-number" type="tel" placeholder="e.g. +1 702 123 4567">
     <button type="button">Submit</button>
 
-    <script src="lib/jquery/jquery.js"></script>
+    <script src="lib/jquery/dist/jquery.js"></script>
     <script src="build/js/intlTelInput.js"></script>
     <script>
       $("#mobile-number").intlTelInput();
