--- a/examples/gen/validation.html
+++ b/examples/gen/validation.html
@@ -32,8 +32,8 @@ telInput.blur(function() {
   }
 });
 
-// on keyup: remove any error
-telInput.keyup(function() {
+// on keydown: remove any error
+telInput.keydown(function() {
   $(this).removeClass(&quot;error&quot;);
 });</code></pre>
 
