--- a/examples/gen/validation.html
+++ b/examples/gen/validation.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Example: Validation</title>
+    <title>Example: isValidNumber</title>
     <link rel="stylesheet" href="../css/prism.css">
     <link rel="stylesheet" href="../../build/css/intlTelInput.css">
     <link rel="stylesheet" href="../../build/css/demo.css">
@@ -11,7 +11,7 @@
 
   <body>
     <a href="/intl-tel-input.html">Back</a>
-    <h1>Example: Validation</h1>
+    <h1>Example: isValidNumber</h1>
     <p>Use Google&#39;s libphonenumber to validate the telephone number on the change event.</p>
     
     <h2>Markup</h2>
