cache busting on asset paths in examples

--- a/examples/gen/default-styling.html
+++ b/examples/gen/default-styling.html
@@ -4,10 +4,10 @@
     <meta charset="utf-8">
     <title>Example: defaultStyling</title>
     <link rel="stylesheet" href="../css/prism.css">
-    <link rel="stylesheet" href="../../build/css/intlTelInput.css">
-    <link rel="stylesheet" href="../../build/css/demo.css">
+    <link rel="stylesheet" href="../../build/css/intlTelInput.css?1393387161333">
+    <link rel="stylesheet" href="../../build/css/demo.css?1393387161333">
     
-      <link rel="stylesheet" href="../css/defaultStyling.css">
+      <link rel="stylesheet" href="../css/defaultStyling.css?1393387161333">
     
   </head>
 
@@ -60,7 +60,7 @@ $(&quot;#phone4&quot;).intlTelInput({defaultStyling: &quot;none&quot;});</code><
 
     <script src="../js/prism.js"></script>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-    <script src="../../build/js/intlTelInput.js"></script>
-    <script src="../js/defaultStyling.js"></script>
+    <script src="../../build/js/intlTelInput.js?1393387161333"></script>
+    <script src="../js/defaultStyling.js?1393387161333"></script>
   </body>
 </html>
