--- a/examples/gen/country-sync.html
+++ b/examples/gen/country-sync.html
@@ -4,10 +4,10 @@
     <meta charset="utf-8">
     <title>Example: Country sync</title>
     <link rel="stylesheet" href="../css/prism.css">
-    <link rel="stylesheet" href="../../build/css/intlTelInput.css">
-    <link rel="stylesheet" href="../../build/css/demo.css">
+    <link rel="stylesheet" href="../../build/css/intlTelInput.css?1393387161333">
+    <link rel="stylesheet" href="../../build/css/demo.css?1393387161333">
     
-      <link rel="stylesheet" href="../css/countrySync.css">
+      <link rel="stylesheet" href="../css/countrySync.css?1393387161333">
     
   </head>
 
@@ -79,7 +79,7 @@ addressDropdown.change(function() {
 
     <script src="../js/prism.js"></script>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-    <script src="../../build/js/intlTelInput.js"></script>
-    <script src="../js/countrySync.js"></script>
+    <script src="../../build/js/intlTelInput.js?1393387161333"></script>
+    <script src="../js/countrySync.js?1393387161333"></script>
   </body>
 </html>
