--- a/examples/gen/modify-country-data.html
+++ b/examples/gen/modify-country-data.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8">
     <title>Example: getCountryData</title>
     <link rel="stylesheet" href="../css/prism.css">
-    <link rel="stylesheet" href="../../build/css/intlTelInput.css">
-    <link rel="stylesheet" href="../../build/css/demo.css">
+    <link rel="stylesheet" href="../../build/css/intlTelInput.css?1393387161333">
+    <link rel="stylesheet" href="../../build/css/demo.css?1393387161333">
     
   </head>
 
@@ -31,7 +31,7 @@ $(&quot;#phone&quot;).intlTelInput();</code></pre>
 
     <script src="../js/prism.js"></script>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-    <script src="../../build/js/intlTelInput.js"></script>
-    <script src="../js/modifyCountryData.js"></script>
+    <script src="../../build/js/intlTelInput.js?1393387161333"></script>
+    <script src="../js/modifyCountryData.js?1393387161333"></script>
   </body>
 </html>
