--- a/examples/gen/only-countries-europe.html
+++ b/examples/gen/only-countries-europe.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8">
     <title>Example: onlyCountries</title>
     <link rel="stylesheet" href="../css/prism.css">
-    <link rel="stylesheet" href="../../build/css/intlTelInput.css">
-    <link rel="stylesheet" href="../../build/css/demo.css">
+    <link rel="stylesheet" href="../../build/css/intlTelInput.css?1393387161333">
+    <link rel="stylesheet" href="../../build/css/demo.css?1393387161333">
     
   </head>
 
@@ -32,7 +32,7 @@
 
     <script src="../js/prism.js"></script>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-    <script src="../../build/js/intlTelInput.js"></script>
-    <script src="../js/onlyCountriesEurope.js"></script>
+    <script src="../../build/js/intlTelInput.js?1393387161333"></script>
+    <script src="../js/onlyCountriesEurope.js?1393387161333"></script>
   </body>
 </html>
