--- a/examples/gen/modify-country-data.html
+++ b/examples/gen/modify-country-data.html
@@ -2,17 +2,17 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Example: getCountryData</title>
+    <title>Example: Modify country data</title>
     <link rel="stylesheet" href="../css/prism.css">
-    <link rel="stylesheet" href="../../build/css/intlTelInput.css?1393387161333">
-    <link rel="stylesheet" href="../../build/css/demo.css?1393387161333">
+    <link rel="stylesheet" href="../../build/css/intlTelInput.css?1393390464893">
+    <link rel="stylesheet" href="../../build/css/demo.css?1393390464893">
     
   </head>
 
   <body>
     <a href="/intl-tel-input.html">Back</a>
-    <h1>Example: getCountryData</h1>
-    <p>Use static getCountryData() to update the data to only show localised country names.</p>
+    <h1>Example: Modify country data</h1>
+    <p>Use static getCountryData method to update the data to only show localised country names.</p>
     
     <h2>Markup</h2>
     <pre><code class="language-markup">&lt;input id=&quot;phone&quot; type=&quot;tel&quot; placeholder=&quot;e.g. +1 702 123 4567&quot;&gt;</code></pre>
@@ -31,7 +31,7 @@ $(&quot;#phone&quot;).intlTelInput();</code></pre>
 
     <script src="../js/prism.js"></script>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-    <script src="../../build/js/intlTelInput.js?1393387161333"></script>
-    <script src="../js/modifyCountryData.js?1393387161333"></script>
+    <script src="../../build/js/intlTelInput.js?1393390464893"></script>
+    <script src="../js/modifyCountryData.js?1393390464893"></script>
   </body>
 </html>
