--- a/examples/gen/only-countries-europe.html
+++ b/examples/gen/only-countries-europe.html
@@ -2,17 +2,17 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Example: onlyCountries</title>
+    <title>Example: European countries</title>
     <link rel="stylesheet" href="../css/prism.css">
-    <link rel="stylesheet" href="../../build/css/intlTelInput.css?1393387161333">
-    <link rel="stylesheet" href="../../build/css/demo.css?1393387161333">
+    <link rel="stylesheet" href="../../build/css/intlTelInput.css?1393390464893">
+    <link rel="stylesheet" href="../../build/css/demo.css?1393390464893">
     
   </head>
 
   <body>
     <a href="/intl-tel-input.html">Back</a>
-    <h1>Example: onlyCountries</h1>
-    <p>Set onlyCountries array to just European country codes.</p>
+    <h1>Example: European countries</h1>
+    <p>Set onlyCountries option to just European country codes.</p>
     
     <h2>Markup</h2>
     <pre><code class="language-markup">&lt;input id=&quot;phone&quot; type=&quot;tel&quot; placeholder=&quot;e.g. +1 702 123 4567&quot;&gt;</code></pre>
@@ -32,7 +32,7 @@
 
     <script src="../js/prism.js"></script>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-    <script src="../../build/js/intlTelInput.js?1393387161333"></script>
-    <script src="../js/onlyCountriesEurope.js?1393387161333"></script>
+    <script src="../../build/js/intlTelInput.js?1393390464893"></script>
+    <script src="../js/onlyCountriesEurope.js?1393390464893"></script>
   </body>
 </html>
