analytics in examples

--- a/examples/gen/only-countries-europe.html
+++ b/examples/gen/only-countries-europe.html
@@ -4,9 +4,22 @@
     <meta charset="utf-8">
     <title>Example: European countries</title>
     <link rel="stylesheet" href="../css/prism.css">
-    <link rel="stylesheet" href="../../build/css/intlTelInput.css?1393391557933">
-    <link rel="stylesheet" href="../../build/css/demo.css?1393391557933">
+    <link rel="stylesheet" href="../../build/css/intlTelInput.css?1394691216932">
+    <link rel="stylesheet" href="../../build/css/demo.css?1394691216932">
     
+
+    <!-- GOOGLE ANALYTICS -->
+    <script>
+      var _gaq = _gaq || [];
+      _gaq.push(['_setAccount', 'UA-26178728-1']);
+      _gaq.push(['_trackPageview']);
+      (function() {
+        var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+        ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+        var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+      })();
+    </script>
+    <!-- /GOOGLE ANALYTICS -->
   </head>
 
   <body>
@@ -32,7 +45,7 @@
 
     <script src="../js/prism.js"></script>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-    <script src="../../build/js/intlTelInput.js?1393391557933"></script>
-    <script src="../js/onlyCountriesEurope.js?1393391557933"></script>
+    <script src="../../build/js/intlTelInput.js?1394691216932"></script>
+    <script src="../js/onlyCountriesEurope.js?1394691216932"></script>
   </body>
 </html>
