--- a/examples/gen/country-sync.html
+++ b/examples/gen/country-sync.html
@@ -4,10 +4,10 @@
     <meta charset="utf-8">
     <title>Example: Country sync</title>
     <link rel="stylesheet" href="../css/prism.css">
-    <link rel="stylesheet" href="../../build/css/intlTelInput.css?1394691216932">
-    <link rel="stylesheet" href="../../build/css/demo.css?1394691216932">
+    <link rel="stylesheet" href="../../build/css/intlTelInput.css?1396984419542">
+    <link rel="stylesheet" href="../../build/css/demo.css?1396984419542">
     
-      <link rel="stylesheet" href="../css/countrySync.css?1394691216932">
+      <link rel="stylesheet" href="../css/countrySync.css?1396984419542">
     
 
     <!-- GOOGLE ANALYTICS -->
@@ -54,7 +54,7 @@ var countryData = $.fn.intlTelInput.getCountryData(),
 telInput.intlTelInput();
 
 // populate the country dropdown
-$.each(countryData.countries, function(i, country) {
+$.each(countryData, function(i, country) {
   addressDropdown.append($(&quot;&lt;option&gt;&lt;/option&gt;&quot;).attr(&quot;value&quot;, country.iso2).text(country.name));
 });
 
@@ -71,7 +71,8 @@ telInput.change();
 addressDropdown.change(function() {
   var countryCode = $(this).val();
   telInput.intlTelInput(&quot;selectCountry&quot;, countryCode);
-});</code></pre>
+});
+</code></pre>
 
     <h2>Result</h2>
     <div id="result">
@@ -92,7 +93,7 @@ addressDropdown.change(function() {
 
     <script src="../js/prism.js"></script>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-    <script src="../../build/js/intlTelInput.js?1394691216932"></script>
-    <script src="../js/countrySync.js?1394691216932"></script>
+    <script src="../../build/js/intlTelInput.js?1396984419542"></script>
+    <script src="../js/countrySync.js?1396984419542"></script>
   </body>
 </html>
