--- a/demo.html
+++ b/demo.html
@@ -11,7 +11,8 @@
     <input id="mobile-number" type="tel" placeholder="e.g. +1 702 123 4567">
     <button type="button">Submit</button>
 
-    <script src="lib/jquery/dist/jquery.js"></script>
+    <!-- Load jQuery from CDN so can run demo immediately -->
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <script src="build/js/intlTelInput.js"></script>
     <script>
       $("#mobile-number").intlTelInput();
