--- a/spec.html
+++ b/spec.html
@@ -20,9 +20,9 @@
   
   <script src=".grunt/grunt-contrib-jasmine/boot.js"></script>
   
-  <script src="lib/jquery/dist/jquery.js"></script>
+  <script src="lib/jquery/jquery.js"></script>
   
-  <script src="lib/jasmine-jquery/lib/jasmine-jquery.js"></script>
+  <script src="lib/jasmine-jquery/jasmine-jquery.js"></script>
   
   <script src="src/spec/helpers/helpers.js"></script>
   
