--- a/spec.html
+++ b/spec.html
@@ -30,7 +30,11 @@
   
   <script src="src/js/intlTelInput.js"></script>
   
+  <script src="lib/libphonenumber/build/isValidNumber.js"></script>
+  
   <script src="src/spec/tests/methods/getCountryData.js"></script>
+  
+  <script src="src/spec/tests/methods/isValidNumber.js"></script>
   
   <script src="src/spec/tests/methods/selectCountry.js"></script>
   
