destroy method tests

--- a/spec.html
+++ b/spec.html
@@ -32,6 +32,8 @@
   
   <script src="lib/libphonenumber/build/isValidNumber.js"></script>
   
+  <script src="src/spec/tests/methods/destroy.js"></script>
+  
   <script src="src/spec/tests/methods/getCountryData.js"></script>
   
   <script src="src/spec/tests/methods/isValidNumber.js"></script>
