tests for getSelectedCountryData

--- a/spec.html
+++ b/spec.html
@@ -36,6 +36,8 @@
   
   <script src="src/spec/tests/methods/getCountryData.js"></script>
   
+  <script src="src/spec/tests/methods/getSelectedCountryData.js"></script>
+  
   <script src="src/spec/tests/methods/isValidNumber.js"></script>
   
   <script src="src/spec/tests/methods/selectCountry.js"></script>
