--- a/spec.html
+++ b/spec.html
@@ -56,6 +56,10 @@
   
   <script src="src/spec/tests/options/preferredCountries.js"></script>
   
+  <script src="src/spec/tests/options/responsiveDropdown.js"></script>
+  
+  <script src="src/spec/tests/options/validationScript.js"></script>
+  
   <script src="src/spec/tests/vanilla/core.js"></script>
   
   <script src="src/spec/tests/vanilla/keyboardShortcuts.js"></script>
