--- a/spec.html
+++ b/spec.html
@@ -46,6 +46,8 @@
   
   <script src="src/spec/tests/methods/setNumber.js"></script>
   
+  <script src="src/spec/tests/options/autoFormat.js"></script>
+  
   <script src="src/spec/tests/options/autoHideDialCode.js"></script>
   
   <script src="src/spec/tests/options/defaultCountry.js"></script>
