--- a/demo.html
+++ b/demo.html
@@ -8,8 +8,10 @@
   </head>
   <body>
     <h1>International Telephone Input</h1>
-    <input id="mobile-number" type="tel" placeholder="e.g. +1 702 123 4567">
-    <button type="button">Submit</button>
+    <form>
+      <input id="mobile-number" type="tel" placeholder="e.g. +1 702 123 4567">
+      <button type="submit">Submit</button>
+    </form>
 
     <!-- Load jQuery from CDN so can run demo immediately -->
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
