--- a/demo.html
+++ b/demo.html
@@ -9,7 +9,7 @@
   <body>
     <h1>International Telephone Input</h1>
     <form>
-      <input id="mobile-number" type="tel" placeholder="e.g. +1 702 123 4567">
+      <input id="mobile-number" type="tel" placeholder="+1 (702) 123-4567">
       <button type="submit">Submit</button>
     </form>
 
