--- a/demo.html
+++ b/demo.html
@@ -9,7 +9,7 @@
   <body>
     <h1>International Telephone Input</h1>
     <form>
-      <input id="mobile-number" type="tel" placeholder="+1 (702) 123-4567">
+      <input id="mobile-number" type="tel" placeholder="+1 (702) 123-4567" value="+17024182678">
       <button type="submit">Submit</button>
     </form>
 
@@ -17,7 +17,10 @@
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <script src="build/js/intlTelInput.js"></script>
     <script>
-      $("#mobile-number").intlTelInput();
+      $("#mobile-number").intlTelInput({
+        autoFormat: true,
+        utilsScript: "lib/libphonenumber/build/utils.js"
+      });
     </script>
   </body>
 </html>
