--- a/demo.html
+++ b/demo.html
@@ -17,7 +17,10 @@
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <script src="build/js/intlTelInput.js"></script>
     <script>
-      $("#mobile-number").intlTelInput();
+      $("#mobile-number").intlTelInput({
+        //autoFormat: true,
+        //utilsScript: "lib/libphonenumber/build/utils.js"
+      });
     </script>
   </body>
 </html>
