fix to faylands code

--- a/demo.html
+++ b/demo.html
@@ -18,6 +18,7 @@
     <script src="build/js/intlTelInput.js"></script>
     <script>
       $("#mobile-number").intlTelInput({
+        //onlyCountries: ['us', 'gb', 'ch', 'ca', 'do']
         //autoFormat: true,
         //utilsScript: "lib/libphonenumber/build/utils.js"
       });
