--- a/demo.html
+++ b/demo.html
@@ -9,7 +9,7 @@
   <body>
     <h1>International Telephone Input</h1>
     <form>
-      <input id="mobile-number" type="tel" placeholder="+1 (702) 123-4567">
+      <input id="mobile-number" type="tel">
       <button type="submit">Submit</button>
     </form>
 
@@ -20,7 +20,7 @@
       $("#mobile-number").intlTelInput({
         //onlyCountries: ['us', 'gb', 'ch', 'ca', 'do']
         //autoFormat: true,
-        //utilsScript: "lib/libphonenumber/build/utils.js"
+        utilsScript: "lib/libphonenumber/build/utils.js"
       });
     </script>
   </body>
