--- a/examples/gen/modify-country-data.html
+++ b/examples/gen/modify-country-data.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8">
     <title>Example: Modify country data</title>
     <link rel="stylesheet" href="../css/prism.css">
-    <link rel="stylesheet" href="../../build/css/intlTelInput.css?1400377268998">
-    <link rel="stylesheet" href="../../build/css/demo.css?1400377268998">
+    <link rel="stylesheet" href="../../build/css/intlTelInput.css?1410057777034">
+    <link rel="stylesheet" href="../../build/css/demo.css?1410057777034">
     
 
     <!-- GOOGLE ANALYTICS -->
@@ -28,7 +28,7 @@
     <p>Use static getCountryData method to update the data to only show localised country names.</p>
     
     <h2>Markup</h2>
-    <pre><code class="language-markup">&lt;input id=&quot;phone&quot; type=&quot;tel&quot; placeholder=&quot;e.g. +1 702 123 4567&quot;&gt;</code></pre>
+    <pre><code class="language-markup">&lt;input id=&quot;phone&quot; type=&quot;tel&quot; placeholder=&quot;+1 702-123-4567&quot;&gt;</code></pre>
 
     <h2>Code</h2>
     <pre><code class="language-javascript">var countryData = $.fn.intlTelInput.getCountryData();
@@ -40,12 +40,12 @@ $(&quot;#phone&quot;).intlTelInput();
 
     <h2>Result</h2>
     <div id="result">
-      <input id="phone" type="tel" placeholder="e.g. +1 702 123 4567">
+      <input id="phone" type="tel" placeholder="+1 702-123-4567">
     </div>
 
     <script src="../js/prism.js"></script>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-    <script src="../../build/js/intlTelInput.js?1400377268998"></script>
-    <script src="../js/modifyCountryData.js?1400377268998"></script>
+    <script src="../../build/js/intlTelInput.js?1410057777034"></script>
+    <script src="../js/modifyCountryData.js?1410057777034"></script>
   </body>
 </html>
