--- a/examples/gen/only-countries-europe.html
+++ b/examples/gen/only-countries-europe.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8">
     <title>Example: European countries</title>
     <link rel="stylesheet" href="../css/prism.css">
-    <link rel="stylesheet" href="../../build/css/intlTelInput.css?1400377268998">
-    <link rel="stylesheet" href="../../build/css/demo.css?1400377268998">
+    <link rel="stylesheet" href="../../build/css/intlTelInput.css?1410057777034">
+    <link rel="stylesheet" href="../../build/css/demo.css?1410057777034">
     
 
     <!-- GOOGLE ANALYTICS -->
@@ -28,11 +28,11 @@
     <p>Set onlyCountries option to just European country codes.</p>
     
     <h2>Markup</h2>
-    <pre><code class="language-markup">&lt;input id=&quot;phone&quot; type=&quot;tel&quot; placeholder=&quot;e.g. +1 702 123 4567&quot;&gt;</code></pre>
+    <pre><code class="language-markup">&lt;input id=&quot;phone&quot; type=&quot;tel&quot; placeholder=&quot;+1 702-123-4567&quot;&gt;</code></pre>
 
     <h2>Code</h2>
     <pre><code class="language-javascript">$(&quot;#phone&quot;).intlTelInput({
-  onlyCountries: [&quot;al&quot;, &quot;ad&quot;, &quot;at&quot;, &quot;by&quot;, &quot;be&quot;, &quot;ba&quot;, &quot;bg&quot;, &quot;hr&quot;, &quot;cz&quot;, &quot;dk&quot;,
+  onlyCountries: [&quot;al&quot;, &quot;ad&quot;, &quot;at&quot;, &quot;by&quot;, &quot;be&quot;, &quot;ba&quot;, &quot;bg&quot;, &quot;hr&quot;, &quot;cz&quot;, &quot;dk&quot;, 
   &quot;ee&quot;, &quot;fo&quot;, &quot;fi&quot;, &quot;fr&quot;, &quot;de&quot;, &quot;gi&quot;, &quot;gr&quot;, &quot;va&quot;, &quot;hu&quot;, &quot;is&quot;, &quot;ie&quot;, &quot;it&quot;, &quot;lv&quot;, 
   &quot;li&quot;, &quot;lt&quot;, &quot;lu&quot;, &quot;mk&quot;, &quot;mt&quot;, &quot;md&quot;, &quot;mc&quot;, &quot;me&quot;, &quot;nl&quot;, &quot;no&quot;, &quot;pl&quot;, &quot;pt&quot;, &quot;ro&quot;, 
   &quot;ru&quot;, &quot;sm&quot;, &quot;rs&quot;, &quot;sk&quot;, &quot;si&quot;, &quot;es&quot;, &quot;se&quot;, &quot;ch&quot;, &quot;ua&quot;, &quot;gb&quot;]
@@ -40,12 +40,12 @@
 
     <h2>Result</h2>
     <div id="result">
-      <input id="phone" type="tel" placeholder="e.g. +1 702 123 4567">
+      <input id="phone" type="tel" placeholder="+1 702-123-4567">
     </div>
 
     <script src="../js/prism.js"></script>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-    <script src="../../build/js/intlTelInput.js?1400377268998"></script>
-    <script src="../js/onlyCountriesEurope.js?1400377268998"></script>
+    <script src="../../build/js/intlTelInput.js?1410057777034"></script>
+    <script src="../js/onlyCountriesEurope.js?1410057777034"></script>
   </body>
 </html>
