--- a/examples/gen/default-country-ip.html
+++ b/examples/gen/default-country-ip.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8">
     <title>Example: Lookup user&#39;s country</title>
     <link rel="stylesheet" href="../css/prism.css">
-    <link rel="stylesheet" href="../../build/css/intlTelInput.css?1400377268998">
-    <link rel="stylesheet" href="../../build/css/demo.css?1400377268998">
+    <link rel="stylesheet" href="../../build/css/intlTelInput.css?1410057777034">
+    <link rel="stylesheet" href="../../build/css/demo.css?1410057777034">
     
 
     <!-- GOOGLE ANALYTICS -->
@@ -28,7 +28,7 @@
     <p>Use IP address lookup to set the defaultCountry option to the user&#39;s country.</p>
     
     <h2>Markup</h2>
-    <pre><code class="language-markup">&lt;input id=&quot;phone&quot; type=&quot;tel&quot; placeholder=&quot;e.g. +1 702 123 4567&quot;&gt;</code></pre>
+    <pre><code class="language-markup">&lt;input id=&quot;phone&quot; type=&quot;tel&quot; placeholder=&quot;+1 702-123-4567&quot;&gt;</code></pre>
 
     <h2>Code</h2>
     <pre><code class="language-javascript">$.get(&quot;http://ipinfo.io&quot;, function(response) {
@@ -39,12 +39,12 @@
 
     <h2>Result</h2>
     <div id="result">
-      <input id="phone" type="tel" placeholder="e.g. +1 702 123 4567">
+      <input id="phone" type="tel" placeholder="+1 702-123-4567">
     </div>
 
     <script src="../js/prism.js"></script>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-    <script src="../../build/js/intlTelInput.js?1400377268998"></script>
-    <script src="../js/defaultCountryIp.js?1400377268998"></script>
+    <script src="../../build/js/intlTelInput.js?1410057777034"></script>
+    <script src="../js/defaultCountryIp.js?1410057777034"></script>
   </body>
 </html>
