--- a/examples/gen/country-sync.html
+++ b/examples/gen/country-sync.html
@@ -4,10 +4,10 @@
     <meta charset="utf-8">
     <title>Example: Country sync</title>
     <link rel="stylesheet" href="../css/prism.css">
-    <link rel="stylesheet" href="../../build/css/intlTelInput.css?1410057777034">
-    <link rel="stylesheet" href="../../build/css/demo.css?1410057777034">
+    <link rel="stylesheet" href="../../build/css/intlTelInput.css?1410061029683">
+    <link rel="stylesheet" href="../../build/css/demo.css?1410061029683">
     
-      <link rel="stylesheet" href="../css/countrySync.css?1410057777034">
+      <link rel="stylesheet" href="../css/countrySync.css?1410061029683">
     
 
     <!-- GOOGLE ANALYTICS -->
@@ -32,7 +32,7 @@
     <h2>Markup</h2>
     <pre><code class="language-markup">&lt;div class=&quot;form-item&quot;&gt;
   &lt;label&gt;Telephone number&lt;/label&gt;
-  &lt;input id=&quot;phone&quot; type=&quot;tel&quot; placeholder=&quot;+1 702-123-4567&quot;&gt;
+  &lt;input id=&quot;phone&quot; type=&quot;tel&quot;&gt;
 &lt;/div&gt;
 
 &lt;div class=&quot;form-item&quot;&gt;
@@ -51,7 +51,9 @@ var countryData = $.fn.intlTelInput.getCountryData(),
   addressDropdown = $(&quot;#address-country&quot;);
 
 // init plugin
-telInput.intlTelInput();
+telInput.intlTelInput({
+  utilsScript: &quot;../../lib/libphonenumber/build/utils.js&quot; // just for formatting/placeholders etc
+});
 
 // populate the country dropdown
 $.each(countryData, function(i, country) {
@@ -78,7 +80,7 @@ addressDropdown.change(function() {
     <div id="result">
       <div class="form-item">
   <label>Telephone number</label>
-  <input id="phone" type="tel" placeholder="+1 702-123-4567">
+  <input id="phone" type="tel">
 </div>
 
 <div class="form-item">
@@ -93,7 +95,7 @@ addressDropdown.change(function() {
 
     <script src="../js/prism.js"></script>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-    <script src="../../build/js/intlTelInput.js?1410057777034"></script>
-    <script src="../js/countrySync.js?1410057777034"></script>
+    <script src="../../build/js/intlTelInput.js?1410061029683"></script>
+    <script src="../js/countrySync.js?1410061029683"></script>
   </body>
 </html>
