--- a/examples/gen/modify-country-data.html
+++ b/examples/gen/modify-country-data.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8">
     <title>Example: Modify country data</title>
     <link rel="stylesheet" href="../css/prism.css">
-    <link rel="stylesheet" href="../../build/css/intlTelInput.css?1410057777034">
-    <link rel="stylesheet" href="../../build/css/demo.css?1410057777034">
+    <link rel="stylesheet" href="../../build/css/intlTelInput.css?1410061029683">
+    <link rel="stylesheet" href="../../build/css/demo.css?1410061029683">
     
 
     <!-- GOOGLE ANALYTICS -->
@@ -28,24 +28,26 @@
     <p>Use static getCountryData method to update the data to only show localised country names.</p>
     
     <h2>Markup</h2>
-    <pre><code class="language-markup">&lt;input id=&quot;phone&quot; type=&quot;tel&quot; placeholder=&quot;+1 702-123-4567&quot;&gt;</code></pre>
+    <pre><code class="language-markup">&lt;input id=&quot;phone&quot; type=&quot;tel&quot;&gt;</code></pre>
 
     <h2>Code</h2>
     <pre><code class="language-javascript">var countryData = $.fn.intlTelInput.getCountryData();
 $.each(countryData, function(i, country) {
   country.name = country.name.replace(/.+\((.+)\)/,&quot;$1&quot;);
 });
-$(&quot;#phone&quot;).intlTelInput();
+$(&quot;#phone&quot;).intlTelInput({
+  utilsScript: &quot;../../lib/libphonenumber/build/utils.js&quot; // just for formatting/placeholders etc
+});
 </code></pre>
 
     <h2>Result</h2>
     <div id="result">
-      <input id="phone" type="tel" placeholder="+1 702-123-4567">
+      <input id="phone" type="tel">
     </div>
 
     <script src="../js/prism.js"></script>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-    <script src="../../build/js/intlTelInput.js?1410057777034"></script>
-    <script src="../js/modifyCountryData.js?1410057777034"></script>
+    <script src="../../build/js/intlTelInput.js?1410061029683"></script>
+    <script src="../js/modifyCountryData.js?1410061029683"></script>
   </body>
 </html>
