--- a/examples/gen/only-countries-europe.html
+++ b/examples/gen/only-countries-europe.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8">
     <title>Example: European countries</title>
     <link rel="stylesheet" href="../css/prism.css">
-    <link rel="stylesheet" href="../../build/css/intlTelInput.css?1410057777034">
-    <link rel="stylesheet" href="../../build/css/demo.css?1410057777034">
+    <link rel="stylesheet" href="../../build/css/intlTelInput.css?1410061029683">
+    <link rel="stylesheet" href="../../build/css/demo.css?1410061029683">
     
 
     <!-- GOOGLE ANALYTICS -->
@@ -28,24 +28,25 @@
     <p>Set onlyCountries option to just European country codes.</p>
     
     <h2>Markup</h2>
-    <pre><code class="language-markup">&lt;input id=&quot;phone&quot; type=&quot;tel&quot; placeholder=&quot;+1 702-123-4567&quot;&gt;</code></pre>
+    <pre><code class="language-markup">&lt;input id=&quot;phone&quot; type=&quot;tel&quot;&gt;</code></pre>
 
     <h2>Code</h2>
     <pre><code class="language-javascript">$(&quot;#phone&quot;).intlTelInput({
   onlyCountries: [&quot;al&quot;, &quot;ad&quot;, &quot;at&quot;, &quot;by&quot;, &quot;be&quot;, &quot;ba&quot;, &quot;bg&quot;, &quot;hr&quot;, &quot;cz&quot;, &quot;dk&quot;, 
   &quot;ee&quot;, &quot;fo&quot;, &quot;fi&quot;, &quot;fr&quot;, &quot;de&quot;, &quot;gi&quot;, &quot;gr&quot;, &quot;va&quot;, &quot;hu&quot;, &quot;is&quot;, &quot;ie&quot;, &quot;it&quot;, &quot;lv&quot;, 
   &quot;li&quot;, &quot;lt&quot;, &quot;lu&quot;, &quot;mk&quot;, &quot;mt&quot;, &quot;md&quot;, &quot;mc&quot;, &quot;me&quot;, &quot;nl&quot;, &quot;no&quot;, &quot;pl&quot;, &quot;pt&quot;, &quot;ro&quot;, 
-  &quot;ru&quot;, &quot;sm&quot;, &quot;rs&quot;, &quot;sk&quot;, &quot;si&quot;, &quot;es&quot;, &quot;se&quot;, &quot;ch&quot;, &quot;ua&quot;, &quot;gb&quot;]
+  &quot;ru&quot;, &quot;sm&quot;, &quot;rs&quot;, &quot;sk&quot;, &quot;si&quot;, &quot;es&quot;, &quot;se&quot;, &quot;ch&quot;, &quot;ua&quot;, &quot;gb&quot;],
+  utilsScript: &quot;../../lib/libphonenumber/build/utils.js&quot; // just for formatting/placeholders etc
 });</code></pre>
 
     <h2>Result</h2>
     <div id="result">
-      <input id="phone" type="tel" placeholder="+1 702-123-4567">
+      <input id="phone" type="tel">
     </div>
 
     <script src="../js/prism.js"></script>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-    <script src="../../build/js/intlTelInput.js?1410057777034"></script>
-    <script src="../js/onlyCountriesEurope.js?1410057777034"></script>
+    <script src="../../build/js/intlTelInput.js?1410061029683"></script>
+    <script src="../js/onlyCountriesEurope.js?1410061029683"></script>
   </body>
 </html>
