--- a/demo.html
+++ b/demo.html
@@ -18,8 +18,13 @@
     <script src="build/js/intlTelInput.js"></script>
     <script>
       $("#mobile-number").intlTelInput({
-        //onlyCountries: ['us', 'gb', 'ch', 'ca', 'do']
-        //autoFormat: true,
+        //autoFormat: false,
+        //autoHideDialCode: false,
+        //defaultCountry: "jp",
+        //nationalMode: true,
+        //onlyCountries: ['us', 'gb', 'ch', 'ca', 'do'],
+        //preferredCountries: ['cn', 'jp'],
+        //responsiveDropdown: true,
         utilsScript: "lib/libphonenumber/build/utils.js"
       });
     </script>
