--- a/demo.html
+++ b/demo.html
@@ -9,7 +9,7 @@
   <body>
     <h1>International Telephone Input</h1>
     <form>
-      <input id="mobile-number" type="tel">
+      <input id="mobile-number" type="tel" value="29374787">
       <button type="submit">Submit</button>
     </form>
 
