updated deps and removed sourcemaps

--- a/spec.html
+++ b/spec.html
@@ -18,6 +18,8 @@
   
   <script src=".grunt/grunt-contrib-jasmine/jasmine-html.js"></script>
   
+  <script src=".grunt/grunt-contrib-jasmine/json2.js"></script>
+  
   <script src=".grunt/grunt-contrib-jasmine/boot.js"></script>
   
   <script src="lib/jquery/jquery.js"></script>
