--- a/demo.html
+++ b/demo.html
@@ -22,6 +22,7 @@
         //autoHideDialCode: false,
         //defaultCountry: "jp",
         //nationalMode: true,
+        //numberType: "MOBILE",
         //onlyCountries: ['us', 'gb', 'ch', 'ca', 'do'],
         //preferredCountries: ['cn', 'jp'],
         //responsiveDropdown: true,
