--- a/examples/gen/invalid-key.html
+++ b/examples/gen/invalid-key.html
@@ -4,10 +4,10 @@
     <meta charset="utf-8">
     <title>Example: Invalid Key</title>
     <link rel="stylesheet" href="../css/prism.css">
-    <link rel="stylesheet" href="../../build/css/intlTelInput.css?1412823133324">
-    <link rel="stylesheet" href="../../build/css/demo.css?1412823133324">
+    <link rel="stylesheet" href="../../build/css/intlTelInput.css?1412823832454">
+    <link rel="stylesheet" href="../../build/css/demo.css?1412823832454">
     
-      <link rel="stylesheet" href="../css/invalidkey.css?1412823133324">
+      <link rel="stylesheet" href="../css/invalidKey.css?1412823832454">
     
 
     <!-- GOOGLE ANALYTICS -->
@@ -53,7 +53,7 @@ input.on(&quot;invalidkey&quot;, function() {
 
     <script src="../js/prism.js"></script>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-    <script src="../../build/js/intlTelInput.js?1412823133324"></script>
-    <script src="../js/invalidKey.js?1412823133324"></script>
+    <script src="../../build/js/intlTelInput.js?1412823832454"></script>
+    <script src="../js/invalidKey.js?1412823832454"></script>
   </body>
 </html>
